--- a/cart.html
+++ b/cart.html
@@ -4,16 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart - Ratul's Shop</title>
-    <!-- Google Fonts Import -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script>
+        document.addEventListener('contextmenu', event => event.preventDefault());
+        document.onkeydown = function (e) {
+            if (e.keyCode == 123) {
+                return false;
+            }
+            if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+                return false;
+            }
+            if (e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+                return false;
+            }
+            if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+                return false;
+            }
+            if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+                return false;
+            }
+        }
+    </script>
 </head>
-<body>
+<body ondragstart="return false" onselectstart="return false">
 
-    <!-- ======== HEADER & NAVIGATION ======== -->
     <header class="main-header">
         <nav class="navbar">
             <a href="index.html" class="logo-container">
@@ -38,7 +55,6 @@
         </nav>
     </header>
 
-    <!-- SEARCH & MOBILE OVERLAYS -->
     <div id="search-overlay" class="search-overlay"><button id="close-search" class="close-search-btn">&times;</button><div class="search-bar-container"><input type="text" id="search-input" placeholder="Search..."></div></div>
     <div class="mobile-nav-menu"><ul class="nav-links-mobile"><li><a href="index.html">Home</a></li><li><a href="categories.html">Shop</a></li><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li></ul></div>
 
@@ -47,27 +63,10 @@
             <h1>Your Shopping Cart</h1>
         </section>
 
-        <!-- ======== CART SECTION ======== -->
         <section class="cart-section">
             <div class="cart-container">
-                <!-- Cart Items Column -->
                 <div class="cart-items-column">
                     <div id="cart-items-container">
-                        <!-- Cart items will be dynamically inserted here by app.js -->
-                        <!-- Example of a single item:
-                        <div class="cart-item" data-id="RS-S02">
-                            <img src="https://placehold.co/100x120/94d2bd/001219?text=Saree" alt="Product Name" class="cart-item-img">
-                            <div class="cart-item-details">
-                                <h3 class="cart-item-title">Heirloom Jamdani Saree</h3>
-                                <p class="cart-item-price">Tk. 22,000</p>
-                                <div class="cart-item-quantity">
-                                    <label>Qty:</label>
-                                    <input type="number" value="1" min="1" class="quantity-input">
-                                </div>
-                            </div>
-                            <button class="cart-item-remove">&times;</button>
-                        </div>
-                        -->
                     </div>
                      <div id="cart-empty-message" class="cart-empty-message" style="display: none;">
                         <p>Your cart is empty.</p>
@@ -75,7 +74,6 @@
                     </div>
                 </div>
 
-                <!-- Order Summary Column -->
                 <div class="order-summary-column">
                     <div class="order-summary">
                         <h2>Order Summary</h2>
@@ -106,10 +104,8 @@
                         </div>
                         
                         <div class="checkout-form">
-                            <h3>Delivery Details</h3>
+                            <h3>Your Details</h3>
                             <input type="text" id="customer-name" placeholder="Full Name" required>
-                            <input type="text" id="customer-address" placeholder="Full Delivery Address" required>
-                            <input type="tel" id="customer-phone" placeholder="Contact Phone Number" required>
                         </div>
 
                         <button id="confirm-order-btn" class="btn btn-primary btn-checkout">Confirm Order</button>
@@ -119,10 +115,8 @@
         </section>
     </main>
     
-    <!-- Add to cart notification -->
     <div id="notification" class="notification">Item added to cart!</div>
 
-    <!-- ======== FOOTER ======== -->
     <footer class="main-footer">
         <div class="footer-content">
              <div class="footer-section"><h4>Ratul's Shop</h4><p>Your one-stop destination for authentic traditional wear.</p></div>
@@ -132,6 +126,6 @@
         <div class="footer-bottom"><p>&copy; 2025 Ratul's Shop. All rights reserved.</p></div>
     </footer>
 
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
