--- a/products/heirloom-jamdani-saree-S02.html
+++ b/products/heirloom-jamdani-saree-S02.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <!-- Main Stylesheet (note the ../ path to go up one directory) -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
@@ -95,7 +95,7 @@
         <div class="footer-bottom"><p>&copy; 2025 Ratul's Shop. All rights reserved.</p></div>
     </footer>
 
-    <script src="js/app.js"></script>
+    <script src="../js/app.js"></script>
 </body>
 </html>
 
