--- a/products/royal-red-silk-saree-S01.html
+++ b/products/royal-red-silk-saree-S01.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header class="main-header">
@@ -58,6 +58,6 @@
         </div>
         <div class="footer-bottom"><p>&copy; 2025 Ratul's Shop. All rights reserved.</p></div>
     </footer>
-    <script src="js/app.js"></script>
+    <script src="../js/app.js"></script>
 </body>
 </html>
